--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 body.dark-mode {
   --background-color: #131313;
   --secondary-color: #E5E7EB;
-  --white: #1F2937;
+  --white: #151a21;
 }
 
 /* Container */
